--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
               <input type="password" name="password" placeholder="Password"/>
             </div>
             <button class="submit">Sign In</button>
-            <a href="recover_email.php" style="float: right; font-size: 12px"
-              >Forgot password?</a
-            >
+            <a href="#">Forgot password?</a>
           </form>
         </div>
         
