--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Exam Management System</title>
   </head>
   <body>
