--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Outfit&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <!-- <link rel="stylesheet" href="./sass/style.scss" /> -->
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Exam Management System</title>
   </head>
   <body>
@@ -28,7 +29,7 @@
         <div class="form login_form">
           <form>
             <div class="form-group">
-              <input type="text" name="email" value="" placeholder="Email" />
+              <input type="text" name="email" value="" placeholder="ID" />
               <input type="password" name="password" placeholder="Password"/>
             </div>
             
