--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <!-- <link rel="stylesheet" href="./sass/style.scss" /> -->
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./sass/style.css">
     <title>Exam Management System</title>
   </head>
   <body>
