--- a/src/login.html
+++ b/src/login.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/sass/style.scss" />
-    <link rel="stylesheet" href="./sass/style.css">
+    <link rel="stylesheet" href="./sass/login.css">
     <title>Exam Management System</title>
   </head>
   <body>
