--- a/src/login.html
+++ b/src/login.html
@@ -29,7 +29,7 @@
         <div class="form login_form">
           <form>
             <div class="form-group">
-              <input type="text" name="email" value="" placeholder="ID" />
+              <input type="text" name="id" value="" placeholder="ID" />
               <input type="password" name="password" placeholder="Password"/>
             </div>
             
