--- a/src/login.html
+++ b/src/login.html
@@ -34,7 +34,7 @@
             </div>
             
             <button class="submit">Sign In</button>
-            <a href="#">Forgot password?</a>
+            <a href="./reset.html">Forgot password?</a>
             
           </form>
         </div>
