--- a/src/student-dashboard/student.html
+++ b/src/student-dashboard/student.html
@@ -15,6 +15,10 @@
         </div>
     </div>
 
-    
+    <div class="sidebar">
+        <div class="side-container">
+            
+        </div>
+    </div>
 </body>
 </html>
