--- a/src/student-dashboard/student.html
+++ b/src/student-dashboard/student.html
@@ -62,6 +62,39 @@
                       </form>
                 </div>
             </div>
+
+            <div class="main-container">
+                <div class="card">
+                    <div class="box">
+                      <div class="content">
+                        <!-- <h2>01</h2> -->
+                        <h3>Card One</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
+                        <a href="#">Read More</a>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card">
+                    <div class="box">
+                      <div class="content">
+                        <!-- <h2>01</h2> -->
+                        <h3>Card One</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
+                        <a href="#">Read More</a>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card">
+                    <div class="box">
+                      <div class="content">
+                        <!-- <h2>01</h2> -->
+                        <h3>Card One</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
+                        <a href="#">Read More</a>
+                      </div>
+                    </div>
+                  </div>
+            </div>
         </div>
     </section>
 
