--- a/src/student-dashboard/student.html
+++ b/src/student-dashboard/student.html
@@ -70,7 +70,7 @@
                         <!-- <h2>01</h2> -->
                         <h3>Card One</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
-                        <a href="#">Read More</a>
+                        <!-- <a href="#">Read More</a> -->
                       </div>
                     </div>
                   </div>
@@ -80,7 +80,7 @@
                         <!-- <h2>01</h2> -->
                         <h3>Card One</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
-                        <a href="#">Read More</a>
+                        <!-- <a href="#">Read More</a> -->
                       </div>
                     </div>
                   </div>
@@ -90,7 +90,37 @@
                         <!-- <h2>01</h2> -->
                         <h3>Card One</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
-                        <a href="#">Read More</a>
+                        <!-- <a href="#">Read More</a> -->
+                      </div>
+                    </div>
+                  </div>
+                <div class="card">
+                    <div class="box">
+                      <div class="content">
+                        <!-- <h2>01</h2> -->
+                        <h3>Card One</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
+                        <!-- <a href="#">Read More</a> -->
+                      </div>
+                    </div>
+                  </div>
+                <div class="card">
+                    <div class="box">
+                      <div class="content">
+                        <!-- <h2>01</h2> -->
+                        <h3>Card One</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
+                        <!-- <a href="#">Read More</a> -->
+                      </div>
+                    </div>
+                  </div>
+                <div class="card">
+                    <div class="box">
+                      <div class="content">
+                        <!-- <h2>01</h2> -->
+                        <h3>Card One</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
+                        <!-- <a href="#">Read More</a> -->
                       </div>
                     </div>
                   </div>
