--- a/src/student-dashboard/student.html
+++ b/src/student-dashboard/student.html
@@ -68,8 +68,11 @@
                     <div class="box">
                       <div class="content">
                         <!-- <h2>01</h2> -->
-                        <h3>Card One</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
+                        <h3>Course Name</h3>
+                        <h5 class="course-code">205</h5>
+                        <div class="progress-bar">
+                          <div class="prog-bar"></div>
+                        </div>
                         <!-- <a href="#">Read More</a> -->
                       </div>
                     </div>
@@ -78,8 +81,11 @@
                     <div class="box">
                       <div class="content">
                         <!-- <h2>01</h2> -->
-                        <h3>Card One</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
+                        <h3>Course Name</h3>
+                        <h5 class="course-code">205</h5>
+                        <div class="progress-bar">
+                          <div class="prog-bar"></div>
+                        </div>
                         <!-- <a href="#">Read More</a> -->
                       </div>
                     </div>
@@ -88,8 +94,11 @@
                     <div class="box">
                       <div class="content">
                         <!-- <h2>01</h2> -->
-                        <h3>Card One</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
+                        <h3>Course Name</h3>
+                        <h5 class="course-code">205</h5>
+                        <div class="progress-bar">
+                          <div class="prog-bar"></div>
+                        </div>
                         <!-- <a href="#">Read More</a> -->
                       </div>
                     </div>
@@ -98,8 +107,11 @@
                     <div class="box">
                       <div class="content">
                         <!-- <h2>01</h2> -->
-                        <h3>Card One</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
+                        <h3>Course Name</h3>
+                        <h5 class="course-code">205</h5>
+                        <div class="progress-bar">
+                          <div class="prog-bar"></div>
+                        </div>
                         <!-- <a href="#">Read More</a> -->
                       </div>
                     </div>
@@ -108,8 +120,11 @@
                     <div class="box">
                       <div class="content">
                         <!-- <h2>01</h2> -->
-                        <h3>Card One</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
+                        <h3>Course Name</h3>
+                        <h5 class="course-code">205</h5>
+                        <div class="progress-bar">
+                          <div class="prog-bar"></div>
+                        </div>
                         <!-- <a href="#">Read More</a> -->
                       </div>
                     </div>
@@ -118,8 +133,11 @@
                     <div class="box">
                       <div class="content">
                         <!-- <h2>01</h2> -->
-                        <h3>Card One</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit laudantium tempora reiciendis nam libero ipsa consectetur officia eius odio sint?</p>
+                        <h3>Course Name</h3>
+                        <h5 class="course-code">205</h5>
+                        <div class="progress-bar">
+                          <div class="prog-bar"></div>
+                        </div>
                         <!-- <a href="#">Read More</a> -->
                       </div>
                     </div>
