--- a/src/student-dashboard/start-exam.html
+++ b/src/student-dashboard/start-exam.html
@@ -21,34 +21,35 @@
       </div>
     </div>
 
-    <div class="sidebar">
-      <div class="side-container">
-        <div class="side-menu-list">
-          <div class="side-menu">
-            <img src="../../assets/icons/dashboard-icon.png" alt="" />
-            <a href="#">Dashboard</a>
-          </div>
-          <div class="side-menu">
-            <img src="../../assets/icons/Customers.png" alt="" />
-            <a href="#">Exams</a>
-          </div>
-          <div class="side-menu">
-            <img src="../../assets/icons/results.png" alt="" />
-            <a href="#">Results</a>
-          </div>
-          <div class="side-menu">
-            <img src="../../assets/icons/settings.png" alt="" />
-            <a href="#">Settings</a>
-          </div>
-          <div class="side-menu">
-            <img src="../../assets/icons/logout.png" alt="" />
-            <a href="#">Sign Out</a>
-          </div>
-        </div>
-      </div>
-    </div>
+   
 
     <section>
+        <div class="sidebar">
+            <div class="side-container">
+              <div class="side-menu-list">
+                <div class="side-menu">
+                  <img src="../../assets/icons/dashboard-icon.png" alt="" />
+                  <a href="#">Dashboard</a>
+                </div>
+                <div class="side-menu">
+                  <img src="../../assets/icons/Customers.png" alt="" />
+                  <a href="#">Exams</a>
+                </div>
+                <div class="side-menu">
+                  <img src="../../assets/icons/results.png" alt="" />
+                  <a href="#">Results</a>
+                </div>
+                <div class="side-menu">
+                  <img src="../../assets/icons/settings.png" alt="" />
+                  <a href="#">Settings</a>
+                </div>
+                <div class="side-menu">
+                  <img src="../../assets/icons/logout.png" alt="" />
+                  <a href="#">Sign Out</a>
+                </div>
+              </div>
+            </div>
+          </div>
         <div class="container">
             <!-- <div class="top-sec">
                 <div class="title">
@@ -64,9 +65,12 @@
             </div> -->
             <div class="main-content">
                 <div class="big-div">
-                    <h2>Welcome User,
+                    <h2>Welcome User,<br>
                         Are you ready to take your exam</h2>
                 </div>
+            </div>
+            <div class="exam-btn">
+                <button>Start</button>
             </div>
            
         </div>
